# CFD-Lab

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
docs/: CFD_Lab_Final_Presentation.pptx
example_cases/FluidTrap/: FluidTrap.pgm
example_cases/RayleighBenard/: RayleighBenard-long.pgm
include/: Boundary.hpp  CUDA_solver.cuh  Case.hpp  Communication.hpp  Datastructures.hpp  Discretization.hpp  Domain.hpp  Enums.hpp  Fields.hpp  Grid.hpp
results/: .~lock.velocity contour nu=0.001.odt#  velocity contour nu=0.001.odt
results/RayleighBernard/: RB_long.avi  RayleighBernard.avi
src/: Boundary.cpp  CUDA_solver.cu  Case.cpp  Communication.cpp  Discretization.cpp  Fields.cpp  Grid.cpp  PressureSolver.cpp  main.cpp
